--- a/web/src/scaffold.css
+++ b/web/src/scaffold.css
@@ -214,7 +214,7 @@
 .rw-label.rw-label-error {
   color: #c53030;
 }
-.rw-input {
+/* .rw-input {
   display: block;
   margin-top: 0.5rem;
   width: 100%;
@@ -225,7 +225,7 @@
   color: #4a5568;
   border-radius: 0.25rem;
   outline: none;
-}
+} */
 .rw-input[type='checkbox'],
 .rw-input[type='radio'] {
   width: 1rem;
@@ -245,14 +245,15 @@
   box-shadow: 0 0 5px #c53030;
 }
 
-.rw-field-error {
-  display: block;
+/* .rw-field-error { */
+  /* display: block;
   margin-top: 0.25rem;
   font-weight: 600;
   text-transform: uppercase;
   font-size: 0.75rem;
-  color: #c53030;
-}
+  color: #c53030; */
+/* } */
+
 .rw-table-wrapper-responsive {
   overflow-x: scroll;
 }
