--- a/web/src/scaffold.css
+++ b/web/src/scaffold.css
@@ -73,10 +73,10 @@
   color: #4a5568;
   padding: 0.75rem 1rem;
 }
-.rw-segment-main {
+/* .rw-segment-main {
   background-color: #f7fafc;
   padding: 1rem;
-}
+} */
 .rw-link {
   color: #4299e1;
   text-decoration: underline;
