--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,13 +19,17 @@ html {
   @apply text-gray-900;
 }
 
+button:disabled {
+  @apply cursor-not-allowed
+}
+
 /* Custom Tailwind styles for RedwoodJS forms */
 
 .rw-field-error {
   @apply text-red-600 mt-2 font-semibold text-sm;
 }
 
-.rw-input {
+.rw-input, input {
   @apply mt-1 block w-full p-2 border-2 outline-none rounded-lg;
   /* display: block;
   margin-top: 0.5rem;
