--- a/web/src/index.css
+++ b/web/src/index.css
@@ -30,6 +30,9 @@ h2 {
   @apply text-3xl mb-2 font-semibold
 }
 
+ul {
+  @apply list-disc
+}
 /* Custom Tailwind styles for RedwoodJS forms */
 
 .rw-field-error {
